# arka-os

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  LICENSE  README.md  env-setup.sh  install.sh  package.json  pro-manifest-v2.json  pyproject.toml
.claude/rules/: bash-hooks.md  constitution.md  node-installer.md  python-core.md  yaml-agents.md  yaml-workflows.md
.github/workflows/: publish.yml  test.yml
.playwright-mcp/: page-2026-04-09T17-52-20-465Z.yml  page-2026-04-09T19-25-17-572Z.yml  page-2026-04-09T19-26-40-678Z.yml  page-2026-04-09T19-26-49-102Z.yml  page-2026-04-09T19-26-52-722Z.yml  page-2026-04-09T19-30-45-530Z.yml
arka/: SKILL.md
config/: agent-memory-template.md  constitution.yaml  disc-profiles.json  disc-team-validator.sh  gotchas-fixes.json  mcp-policy.yaml  providers-registry.json  settings-template.json  statusline-v2.sh  statusline.sh  system-prompt.sh  user-claude.md
config/agent-allowlists/: _base.yaml  laravel.yaml  node.yaml  nuxt.yaml  python.yaml
config/hooks/: agent-provision.sh  cwd-changed.ps1  cwd-changed.sh  post-tool-use-v2.sh  post-tool-use.sh  pre-compact-v2.sh  pre-compact.sh  pre-tool-use.ps1  pre-tool-use.sh  session-start.sh  stop.ps1  stop.sh  token-hygiene.sh  user-prompt-submit-v2.sh  user-prompt-submit.ps1  user-prompt-submit.sh
config/standards/: communication.md  orchestration.md
core/: __init__.py  keys.py
core/agents/: __init__.py  behavior_enforcer.py  dna_registry.py  loader.py  registry_gen.py  schema.py  validator.py
core/budget/: __init__.py  manager.py  schema.py
core/cognition/: __init__.py
core/conclave/: __init__.py  advisor_db.py  display.py  matcher.py  persistence.py  profiler.py  prompts.py  schema.py
core/forge/: __init__.py  complexity.py  handoff.py  orchestrator.py  persistence.py  renderer.py  runtime_dispatcher.py  schema.py
core/governance/: __init__.py  constitution.py  quality_api.py  quality_router.py  review_workflow.py
core/jobs/: __init__.py  manager.py
core/knowledge/: __init__.py  chunker.py  embedder.py  indexer.py  ingest.py  vector_store.py
core/memory/: compressor.py  rehydrator.py  session_store.py
core/obsidian/: __init__.py  templates.py  writer.py
core/orchestration/: __init__.py  patterns.py  protocol.py
core/personas/: __init__.py  manager.py  schema.py
core/registry/: __init__.py  generator.py
core/runtime/: __init__.py  base.py  claude_code.py  codex_cli.py  cursor.py  gemini_cli.py  registry.py  subagent.py  user_paths.py
core/specs/: __init__.py  manager.py  schema.py
core/squads/: __init__.py  loader.py  registry.py  schema.py
core/synapse/: __init__.py  cache.py  engine.py  kb_cache.py  layers.py
core/sync/: __init__.py  agent_provisioner.py  ai_mcp_decider.py  content_merger.py  content_syncer.py  descriptor_syncer.py  discovery.py  (+9 more)
dashboard/: nuxt.config.ts  package.json  pnpm-lock.yaml
docs/: API.md  ARCHITECTURE.md  COMMANDS.md  COMPETITIVE-ANALYSIS-AIOX.md  DEPARTMENTS.md  EXTERNAL-SKILLS.md  GETTING-STARTED.md  INTEGRATIONS.md  MIGRATION-V1-V2.md  PERSONAS.md  SKILL-STANDARD.md  USE-CASES.md
installer/: cli.js  detect-runtime.js  doctor.js  index.js  init.js  keys.js  migrate-user-data.js  migrate.js  prompts.js  python-resolver.js  uninstall.js  update.js
knowledge/: INDEX.md  agents-registry-v2.json  agents-registry.json  commands-keywords.json  commands-registry-v2.json  commands-registry.json  commands-registry.json.bak  ecosystems.json  obsidian-config.json
mcps/: registry.json
mcps/arka-prompts/: commands.py  pyproject.toml  server.py
scripts/: check-version.js  dashboard-api.py  knowledge-index.py  skill_validator.py  start-dashboard.sh  synapse-bridge.py
tests/: brand.bats  cli.bats  detect-stack.bats  disc.bats  doctor.bats  hooks.bats  kb.bats  mcp.bats  orchestrator.bats  statusline.bats
(+602 files in other folders)
