[project]
name = "arkaos-core"
version = "2.18.1"
description = "Core engine for ArkaOS — The Operating System for AI Agent Teams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "WizardingCode", email = "hello@wizardingcode.com"},
]
keywords = ["ai", "agents", "orchestration", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
knowledge = [
    "fastembed>=0.8.0",
    "sqlite-vec>=0.1.1",
]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
ingest = [
    "yt-dlp>=2024.0",
    "faster-whisper>=1.0.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://arkaos.dev"
Repository = "https://github.com/andreagroferreira/arka-os"
Documentation = "https://docs.arkaos.dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
