[project]
name = "arka-prompts"
version = "0.1.0"
description = "ARKA OS department commands as MCP prompts"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
